--- a/index_david.html
+++ b/index_david.html
@@ -31,7 +31,7 @@
     <img src="assets/davidcat.png" id="cat-david">
     <img src="assets/fakecat.png" id="cat-fake">
     <img src="assets/rockincat.png" id="cat-rockin">
-    <img src="assets/sandwhichCat.png" alt="cat-sandwich">
+    <img src="assets/sandwhichCat.png" id="cat-sandwich">
 
     <!-- PLAYERS -->
     <img src="assets/player1.png" id="player1">
