--- a/index_david.html
+++ b/index_david.html
@@ -39,7 +39,22 @@
     <img src="assets/player2.png" id="player2">
     <img src="assets/player2damaged.png" id="player2-damaged">
 
+    <!-- BOOMBOX -->
+    <img src="assets/boombox.png" id="boombox">
+
     <!-- BACKGROUND ELEMENTS -->
+    <img src="assets/wallpaper.png" id="wallpaper">
+
+    <img src="assets/fireplace.png" id="fireplace">
+    <img src="assets/fire1.png" id="fire1">
+    <img src="assets/fire2.png" id="fire2">
+    <img src="assets/fire3.png" id="fire3">
+    <img src="assets/fire4.png" id="fire4">
+
+    <img src="assets/pot.png" id="pot">
+    <img src="assets/otherpot.png" id="other-pot">
+
+    <img src="assets/lamp.png" id="lamp">
     <img src="assets/plant.png" id="plant">
     <img src="assets/couch.png" id="couch">
     <img src="assets/largeCouch.png" id="large-couch">
