--- a/index_david.html
+++ b/index_david.html
@@ -58,10 +58,8 @@
     <img src="assets/plant.png" id="plant">
     <img src="assets/couch.png" id="couch">
     <img src="assets/largeCouch.png" id="large-couch">
-
-    <!-- OTHER ASSETS -->
-    <img src="assets/boombox.png" id="boombox">
 </div>
+<iframe src="songs/1.mp3" allow="" style="display: none;" id="beats"></iframe>
 <canvas id="main-canvas" width="2560" height="1350"></canvas>
 </body>
 </html>
