--- a/index_david.html
+++ b/index_david.html
@@ -44,6 +44,7 @@
 
     <!-- BACKGROUND ELEMENTS -->
     <img src="assets/wallpaper.png" id="wallpaper">
+    <img src="assets/floor.png" id="floor">
 
     <img src="assets/fireplace.png" id="fireplace">
     <img src="assets/fire1.png" id="fire1">
@@ -59,7 +60,7 @@
     <img src="assets/couch.png" id="couch">
     <img src="assets/largeCouch.png" id="large-couch">
 </div>
-<iframe src="songs/1.mp3" allow="" style="display: none;" id="beats"></iframe>
+<iframe src="assets/songs/1.mp3" allow="" style="display: none;" id="beats"></iframe>
 <canvas id="main-canvas" width="2560" height="1350"></canvas>
 </body>
 </html>
