--- a/index_david.html
+++ b/index_david.html
@@ -51,6 +51,12 @@
     <img src="assets/fakecat.png" id="cat-fake">
     <img src="assets/rockincat.png" id="cat-rockin">
     <img src="assets/sandwhichCat.png" id="cat-sandwich">
+    <!-- second batch -->
+    <img src="assets/neutralcat.png" id="cat-neutral">
+    <img src="assets/elizacat.png" id="cat-eliza">
+    <img src="assets/aidoncat.png" id="cat-aidon">
+    <img src="assets/allancat.png" id="cat-allan">
+    <img src="assets/willcat.png" id="cat-will">
 
     <img src="assets/poof1.png" id="poof1">
     <img src="assets/poof2.png" id="poof2">
@@ -77,6 +83,7 @@
     <img src="assets/fire4.png" id="fire4">
 
     <img src="assets/frame.png" id="frame">
+    <img src="assets/art1.png" id="art1">
 
     <img src="assets/pot.png" id="pot">
     <img src="assets/otherpot.png" id="other-pot">
@@ -85,6 +92,9 @@
     <img src="assets/plant.png" id="plant">
     <img src="assets/couch.png" id="couch">
     <img src="assets/largeCouch.png" id="large-couch">
+
+    <!-- SCORE / MENU -->
+    <img src="assets/coin.png" alt="coin">
 </div>
 <h1>Pat-a-Cat</h1>
 <iframe src="assets/songs/1.mp3" allow="" style="display: none;" id="beats"></iframe>
