--- a/index_david.html
+++ b/index_david.html
@@ -77,10 +77,16 @@
     <img src="assets/floor.png" id="floor">
 
     <img src="assets/fireplace.png" id="fireplace">
+    <img src="assets/firebackversion2.png" id="fireback">
     <img src="assets/fire1.png" id="fire1">
     <img src="assets/fire2.png" id="fire2">
     <img src="assets/fire3.png" id="fire3">
     <img src="assets/fire4.png" id="fire4">
+
+    <img src="assets/back1.png" id="back1">
+    <img src="assets/back2.png" id="back2">
+    <img src="assets/back3.png" id="back3">
+    <img src="assets/back4.png" id="back4">
 
     <img src="assets/frame.png" id="frame">
     <img src="assets/art1.png" id="art1">
