--- a/index_david.html
+++ b/index_david.html
@@ -35,6 +35,29 @@
             height: 675px;
         }
 
+        span#player1-score, span#player2-score {
+            position: fixed;
+            z-index: 99;
+            top: 38px;
+
+            font-family: "CatPat", sans-serif;
+            font-size: 1.3rem;
+            color: rgba(10, 5, 0, 0.6);
+        }
+
+        span#player1-score-value, span#player2-score-value {
+            color: rgba(10, 5, 0, 0.8);
+            margin-left: 0.2em;
+        }
+
+        span#player1-score {
+            left: calc(100% - 410px);
+        }
+
+        span#player2-score {
+            left: calc(100% - 185px);
+        }
+
         @font-face {
             font-family: "CatPat";
             src: url("assets/Myfont-Regular.ttf") format("truetype"),
@@ -100,9 +123,11 @@
     <img src="assets/largeCouch.png" id="large-couch">
 
     <!-- SCORE / MENU -->
-    <img src="assets/coin.png" alt="coin">
+    <img src="assets/coin.png" id="coin">
 </div>
 <h1>Pat-a-Cat</h1>
+<span id="player1-score">Player 1: <span id="player1-score-value">0</span></span>
+<span id="player2-score">Player 2: <span id="player2-score-value">0</span></span>
 <iframe src="assets/songs/1.mp3" allow="" style="display: none;" id="beats"></iframe>
 <canvas id="main-canvas" width="2560" height="1350"></canvas>
 </body>
