--- a/index_david.html
+++ b/index_david.html
@@ -113,6 +113,9 @@
 
     <img src="assets/frame.png" id="frame">
     <img src="assets/art1.png" id="art1">
+    <img src="assets/art2.png" id="art2">
+    <img src="assets/art3.png" id="art3">
+    <img src="assets/art4.png" id="art4">
 
     <img src="assets/pot.png" id="pot">
     <img src="assets/otherpot.png" id="other-pot">
