--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             position: fixed;
             top: 0; right: 0; bottom: 0; left: 0;
 
-            width: 1280px;
-            height: 675px;
+            /*width: 1280px;*/
+            /*height: 675px;*/
         }
 
         span#player1-score, span#player2-score {
@@ -50,13 +50,13 @@
             margin-left: 0.2em;
         }
 
-        span#player1-score {
-            left: calc(100% - 410px);
-        }
+        /*span#player1-score {*/
+            /*left: calc(100% - 410px);*/
+        /*}*/
 
-        span#player2-score {
-            left: calc(100% - 185px);
-        }
+        /*span#player2-score {*/
+            /*left: calc(100% - 185px);*/
+        /*}*/
 
         @font-face {
             font-family: "CatPat";
@@ -132,6 +132,6 @@
 <span id="player1-score">Player 1: <span id="player1-score-value">0</span></span>
 <span id="player2-score">Player 2: <span id="player2-score-value">0</span></span>
 <iframe src="assets/songs/1.mp3" allow="" style="display: none;" id="beats"></iframe>
-<canvas id="main-canvas" width="2560" height="1350"></canvas>
+<canvas id="main-canvas"></canvas>
 </body>
 </html>
