update assets, add firecat

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
     <img src="assets/allancat.png" id="cat-allan">
     <img src="assets/willcat.png" id="cat-will">
 
+    <!-- FIRE CAT -->
+    <img src="assets/fireplacecat.png" id="fire-cat">
+
     <img src="assets/poof1.png" id="poof1">
     <img src="assets/poof2.png" id="poof2">
     <img src="assets/poof3.png" id="poof3">
