update to move cats to their own folder

--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
 <body>
 <div id="assets">
     <!-- CATS -->
-    <img src="assets/alvincat.png" id="cat-alvin">
-    <img src="assets/cutecate.png" id="cat-cute">
-    <img src="assets/davidcat.png" id="cat-david">
-    <img src="assets/fakecat.png" id="cat-fake">
-    <img src="assets/rockincat.png" id="cat-rockin">
-    <img src="assets/sandwhichCat.png" id="cat-sandwich">
+    <img src="assets/cats/alvincat.png" id="cat-alvin">
+    <img src="assets/cats/cutecate.png" id="cat-cute">
+    <img src="assets/cats/davidcat.png" id="cat-david">
+    <img src="assets/cats/fakecat.png" id="cat-fake">
+    <img src="assets/cats/rockincat.png" id="cat-rockin">
+    <img src="assets/cats/sandwhichCat.png" id="cat-sandwich">
     <!-- second batch -->
-    <img src="assets/neutralcat.png" id="cat-neutral">
-    <img src="assets/elizacat.png" id="cat-eliza">
-    <img src="assets/aidoncat.png" id="cat-aidon">
-    <img src="assets/allancat.png" id="cat-allan">
-    <img src="assets/willcat.png" id="cat-will">
+    <img src="assets/cats/neutralcat.png" id="cat-neutral">
+    <img src="assets/cats/elizacat.png" id="cat-eliza">
+    <img src="assets/cats/aidoncat.png" id="cat-aidon">
+    <img src="assets/cats/allancat.png" id="cat-allan">
+    <img src="assets/cats/willcat.png" id="cat-will">
 
     <!-- FIRE CAT -->
-    <img src="assets/fireplacecat.png" id="fire-cat">
+    <img src="assets/cats/fireplacecat.png" id="fire-cat">
 
     <img src="assets/poof1.png" id="poof1">
     <img src="assets/poof2.png" id="poof2">
