--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <title>Pat-a-Cat</title>
+    <script src="js_david/CatType.js" defer></script>
+    <script src="js_david/Cat.js" defer></script>
+    <script src="js_david/Player.js" defer></script>
     <script src="js_david/main.js" defer></script>
 
     <style type="text/css">
