--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Pat-a-Cat</title>
+    <script src="js_david/constants.js"></script>
     <script src="js_david/CatType.js" defer></script>
     <script src="js_david/Cat.js" defer></script>
     <script src="js_david/Player.js" defer></script>
@@ -30,9 +31,16 @@
             display: none;
         }
 
+        canvas#background-canvas {
+            position: fixed;
+            top: 0; right: 0; bottom: 0; left: 0;
+            z-index: 1;
+        }
+
         canvas#main-canvas {
             position: fixed;
             top: 0; right: 0; bottom: 0; left: 0;
+            z-index: 2;
 
             /*width: 1280px;*/
             /*height: 675px;*/
@@ -137,6 +145,7 @@
 <h1>Pat-a-Cat</h1>
 <span id="player1-score">Player 1: <span id="player1-score-value">0</span></span>
 <span id="player2-score">Player 2: <span id="player2-score-value">0</span></span>
+<canvas id="background-canvas"></canvas>
 <canvas id="main-canvas"></canvas>
 </body>
 </html>
