Fix #17 by minimally drawing cat with height 1, add charset, and fix background elements not appearing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <title>Pat-a-Cat</title>
+
+    <meta charset="utf-8">
+
     <script src="js_david/constants.js"></script>
     <script src="js_david/CatType.js" defer></script>
     <script src="js_david/Cat.js" defer></script>
