Convert everything to typescript

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
     <meta charset="utf-8">
 
-    <script src="js/constants.js"></script>
+    <script src="js/Core.js"></script>
     <script src="js/CatType.js" defer></script>
     <script src="js/Cat.js" defer></script>
     <script src="js/Player.js" defer></script>
-    <script src="js/main.js" defer></script>
+    <script src="js/Main.js" defer></script>
 
     <style type="text/css">
         body {
