--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta charset="utf-8">
 
+    <script src="js/Github.js"></script>
     <script src="js/Core.js"></script>
     <script src="js/CatType.js" defer></script>
     <script src="js/Cat.js" defer></script>
